[gd_scene load_steps=2 format=3 uid="uid://dnh0www6opq0g"]

[ext_resource type="Script" path="res://scenes/release-manager/release-manager.gd" id="1_sdoj2"]

[node name="ReleaseManager" type="ColorRect"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.415686, 0.415686, 0.415686, 1)
script = ExtResource("1_sdoj2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Release Manager"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProjectNameHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProjectNameLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectNameHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Project Name:"
horizontal_alignment = 2

[node name="ProjectNameLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectNameHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the appropriate godot version you want to build/export with."
text = "New Project"
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="ProjectPathHBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProjectPathLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Project Path:"
horizontal_alignment = 2

[node name="ProjectPathLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the appropriate godot version you want to build/export with."
text = "New Project"
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="GodotPathHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GodotPathLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/GodotPathHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Godot Path:"
horizontal_alignment = 2

[node name="ExportPathLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/GodotPathHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the appropriate godot version you want to build/export with."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="ExportPresetHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportPresetLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Export Preset:"
horizontal_alignment = 2

[node name="WindowsCheckBox" type="CheckBox" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer"]
layout_mode = 2
tooltip_text = "\"Windows Desktop\""
button_pressed = true
text = "Windows"

[node name="LinuxCheckBox" type="CheckBox" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer"]
layout_mode = 2
tooltip_text = "\"Linux/X11\""
button_pressed = true
text = "Linux"

[node name="WebCheckBox" type="CheckBox" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer"]
layout_mode = 2
tooltip_text = "\"Web\""
button_pressed = true
text = "Web"

[node name="EmptyButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="ExportPathHBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportPathLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPathHBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Export Path:"
horizontal_alignment = 2

[node name="ExportPathLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPathHBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the project folder."
caret_blink = true
caret_blink_interval = 0.5

[node name="ProjectVersionHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProjectVersionLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectVersionHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Project Version:"
horizontal_alignment = 2

[node name="ProjectVersionLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectVersionHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "The version can be whatever you want as long as long as it results in a valid export path. Needs to be non empty."
text = "v0.0.1"
caret_blink = true
caret_blink_interval = 0.5

[node name="ExportTypeHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportTypeLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportTypeHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Export Type:"
horizontal_alignment = 2

[node name="ExportTypeOptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportTypeHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Export with the debug option enabled?"
item_count = 2
popup/item_0/text = "Release"
popup/item_0/id = 0
popup/item_1/text = "Debug"
popup/item_1/id = 1

[node name="PackageTypeHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PackageTypeLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PackageTypeHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Package Type:"
horizontal_alignment = 2

[node name="PackageTypeOptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PackageTypeHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Zip or not and optionally cleanup the files after copying them to the .zip package."
item_count = 3
popup/item_0/text = "No Zip"
popup/item_0/id = 0
popup/item_1/text = "Zip"
popup/item_1/id = 1
popup/item_2/text = "Zip + Clean"
popup/item_2/id = 2

[node name="ExportFileNameHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportFileNameLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportFileNameHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Export File Name:"
horizontal_alignment = 2

[node name="ExportFileNameLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportFileNameHBoxContainer"]
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Must be valid file name. Recommend no spaces."

[node name="ItchProjectNameHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ItchProjectNameLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ItchProjectNameHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Itch Project Name:"
horizontal_alignment = 2

[node name="ItchProjectNameLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ItchProjectNameHBoxContainer"]
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ItchProfileNameHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ItchProfileNameLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ItchProfileNameHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Itch Profile Name:"
horizontal_alignment = 2

[node name="ItchProfileNameLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ItchProfileNameHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Your itch account name for publishing to itch.io with butler."
caret_blink = true
caret_blink_interval = 0.5

[node name="ExportPathHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPathHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Export Preview:"
horizontal_alignment = 2

[node name="ExportPreviewTextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPathHBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="ButlerCommandHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PublishLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ButlerCommandHBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Publish Preview:"
horizontal_alignment = 2

[node name="ButlerPreviewTextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ButlerCommandHBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="ErrorCountVBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 2

[node name="ErrorsLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ERRORS: "

[node name="ErrorCountLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="WarningsLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "WARNINGS: "

[node name="WarningsCountLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ErrorCountVBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="OutputVBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/OutputVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLabel" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/OutputVBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Output:"
horizontal_alignment = 2

[node name="OutputTextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/OutputVBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="InvisibleButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="OpenProjectPathFolder" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "Open Folder"

[node name="InvisibleButton2" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton3" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="SelectExportPathButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "Select Folder"

[node name="InvisibleButton4" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton5" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton6" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton10" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton7" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton8" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 33)
layout_mode = 2

[node name="ExportProject" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "Export Project"

[node name="OpenProjectFolder" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "Open Folder"

[node name="InvisibleButton9" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PublishButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "Publish"

[node name="InvisibleButton11" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="InvisibleButton12" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="InvisibleButton13" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Save Settings"

[node name="CloseButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Close"

[node name="SaveChangesConfirmationDialog" type="ConfirmationDialog" parent="."]
position = Vector2i(400, 300)
size = Vector2i(361, 100)
ok_button_text = "Yes"
dialog_text = "Would you like to save changes?"
cancel_button_text = "No"

[node name="SelectFolderFileDialog" type="FileDialog" parent="."]
initial_position = 2
title = "Open a Directory"
size = Vector2i(600, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer/WindowsCheckBox" to="." method="_on_windows_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer/LinuxCheckBox" to="." method="_on_linux_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportPresetHBoxContainer/WebCheckBox" to="." method="_on_web_check_box_pressed"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ProjectVersionHBoxContainer/ProjectVersionLineEdit" to="." method="_on_project_version_line_edit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportTypeHBoxContainer/ExportTypeOptionButton" to="." method="_on_export_type_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PackageTypeHBoxContainer/PackageTypeOptionButton" to="." method="_on_package_type_option_button_item_selected"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ExportFileNameHBoxContainer/ExportFileNameLineEdit" to="." method="_on_export_file_name_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ItchProjectNameHBoxContainer/ItchProjectNameLineEdit" to="." method="_on_itch_project_name_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ItchProfileNameHBoxContainer/ItchProfileNameLineEdit" to="." method="_on_itch_name_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/OpenProjectPathFolder" to="." method="_on_open_project_folder_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/SelectExportPathButton" to="." method="_on_select_export_path_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ExportProject" to="." method="_on_export_project_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/OpenProjectFolder" to="." method="_on_open_project_folder_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/PublishButton" to="." method="_on_publish_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="canceled" from="SaveChangesConfirmationDialog" to="." method="_on_save_changes_confirmation_dialog_canceled"]
[connection signal="confirmed" from="SaveChangesConfirmationDialog" to="." method="_on_save_changes_confirmation_dialog_confirmed"]
[connection signal="dir_selected" from="SelectFolderFileDialog" to="." method="_on_select_folder_file_dialog_dir_selected"]
